Added singleton for stats

--- a/bfp4f-sharp-api/bfp4f-sharp-api.csproj
+++ b/bfp4f-sharp-api/bfp4f-sharp-api.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="ApiCommunication.cs" />
     <Compile Include="ApiStats.cs" />
+    <Compile Include="ApiStatsSingleton.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
