Added new class GetLoadoutVO

--- a/bfp4f-sharp-api/bfp4f-sharp-api.csproj
+++ b/bfp4f-sharp-api/bfp4f-sharp-api.csproj
@@ -51,6 +51,7 @@
     <Compile Include="ApiStatsSingleton.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="vos\GetLoadoutVO.cs" />
     <Compile Include="vos\GetUserInfoVO.cs" />
   </ItemGroup>
   <ItemGroup>
